# plotlet-extensions

./: .gitignore  LICENSE  README.md  pyproject.toml
gallery/: _gallery.py  index.html
src/plotlet/extensions/: __init__.py  alluvial.py  bland_altman.py  boxenplot.py  bubble_grid.py  bump.py  calendar_heatmap.py  calibration_plot.py  cleveland_dot.py  confusion_matrix.py  crossbar.py  diverging_bar.py  dumbbell.py  eventplot.py  forest_plot.py  funnel_plot.py  gene_arrow.py  horizon.py  horizontal_bar.py  jointplot.py  km_curve.py  loess.py  lollipop.py  ma_plot.py  manhattan.py  mosaic.py  pair_plot.py  parallel_coordinates.py  pca_biplot.py  percentile_band.py  pr_curve.py  pyramid_plot.py  raincloud.py  residual_diagnostics.py  roc_curve.py  sales_funnel.py  sankey.py  significance_brackets.py  slope_chart.py  split_violin.py  (+4 more)
tests/: conftest.py  test_extensions.py  test_journal_roundtrip.py
