[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotlet-extensions"
version = "0.1.0"
description = "Domain-specific plot types for plotlet — volcano, manhattan, sankey, raincloud, ROC/PR, KM curves, and ~40 more single-file artists that register on plotlet at import time."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
    { name = "gitbamboo42" },
]
keywords = [
    "plot",
    "svg",
    "scientific",
    "visualization",
    "plotlet",
    "extensions",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "plotlet",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pandas",
  "statsmodels>=0.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[project.urls]
Homepage = "https://github.com/gitbamboo42/plotlet-extensions"
Repository = "https://github.com/gitbamboo42/plotlet-extensions"
Issues = "https://github.com/gitbamboo42/plotlet-extensions/issues"

# `plotlet.extensions` is a PEP 420 namespace package: this distribution ships
# `plotlet/extensions/*.py` with NO `__init__.py`, so its modules merge with the
# handful of extensions kept in core plotlet under the same import path.
[tool.setuptools.packages.find]
where = ["src"]
include = ["plotlet.extensions*"]
namespaces = true
